--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,23 +24,65 @@ stages:
         buildContext: $(Build.Repository.LocalPath)
         repository: $(webRepository)
         dockerfile: '$(Build.SourcesDirectory)/Tailspin.SpaceGame.Web/Dockerfile'
-        containerRegistry: 'Container Registry Connection'
+        containerRegistry: 'acr-sc'
         tags: |
           $(tag)
+    - task: Docker@2
+      displayName: 'Build and push the leaderboard image to container registry'
+      inputs:
+        command: buildAndPush
+        buildContext: $(Build.Repository.LocalPath)
+        repository: $(leaderboardRepository)
+        dockerfile: '$(Build.SourcesDirectory)/Tailspin.SpaceGame.LeaderboardContainer/Dockerfile'
+        containerRegistry: 'acr-sc'
+        tags: |
+          $(tag)  
+    - publish: '$(Build.SourcesDirectory)/manifests'
+      artifact: manifests                        
 
 - stage: 'Deploy'
-  displayName: 'Deploy the container'
+  displayName: 'Deploy the containers'
   dependsOn: Build
   jobs:
-  - job: 'Deploy'
-    displayName: 'Deploy job'
+  - deployment: Deploy
+    displayName: Deploy
     pool:
       vmImage: 'ubuntu-20.04'
+    environment: 'dev'
     variables:
     - group: Release
-    steps:
-    - task: AzureWebAppContainer@1
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - download: current
+            artifact: manifests
+    - task: KubernetesManifest@1
+      displayName: Create imagePullSecret
       inputs:
-       appName: $(WebAppName)
-       azureSubscription: 'Resource Manager - Tailspin - Space Game'
-       imageName: $(RegistryName)/$(webRepository):$(build.buildId)
+        action: createSecret
+        connectionType: azureResourceManager
+        secretName: $(imagePullSecret)
+        dockerRegistryEndpoint: 'Container Registry Connection'
+        azureSubscriptionConnection: 'Kubernetes Cluster Connection'
+        azureResourceGroup: 'eShopOnWeb-test'
+        kubernetesCluster: 'tailspinspacegame-24591'
+        namespace: 'default'
+    
+    - task: KubernetesManifest@1
+      displayName: Deploy to Kubernetes cluster
+      inputs:
+        action: deploy
+        connectionType: azureResourceManager
+        azureSubscriptionConnection: 'Kubernetes Cluster Connection'
+        azureResourceGroup: 'eShopOnWeb-test'
+        kubernetesCluster: 'tailspinspacegame-24591'
+        namespace: 'default'
+        manifests: |
+          $(Pipeline.Workspace)/manifests/deployment.yml
+          $(Pipeline.Workspace)/manifests/service.yml
+        imagePullSecrets: |
+          $(imagePullSecret)
+        containers: |
+          $(RegistryName)/$(webRepository):$(tag)
+          $(RegistryName)/$(leaderboardRepository):$(tag)           
