--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,5 +1,5 @@
 trigger:
-- 'main'
+  - 'main'
 
 variables:
   buildConfiguration: 'Release'
@@ -9,80 +9,80 @@ variables:
   imagePullSecret: 'secret'
 
 stages:
-- stage: 'Build'
-  displayName: 'Build and push'
-  jobs:  
-  - job: 'Build'
-    displayName: 'Build job'
-    pool:
-      vmImage: 'ubuntu-20.04'
-    steps:
-    - task: Docker@2
-      displayName: 'Build and push the image to container registry'
-      inputs:
-        command: buildAndPush
-        buildContext: $(Build.Repository.LocalPath)
-        repository: $(webRepository)
-        dockerfile: '$(Build.SourcesDirectory)/Tailspin.SpaceGame.Web/Dockerfile'
-        containerRegistry: 'acr-sc'
-        tags: |
-          $(tag)
-    - task: Docker@2
-      displayName: 'Build and push the leaderboard image to container registry'
-      inputs:
-        command: buildAndPush
-        buildContext: $(Build.Repository.LocalPath)
-        repository: $(leaderboardRepository)
-        dockerfile: '$(Build.SourcesDirectory)/Tailspin.SpaceGame.LeaderboardContainer/Dockerfile'
-        containerRegistry: 'acr-sc'
-        tags: |
-          $(tag)  
-    - publish: '$(Build.SourcesDirectory)/manifests'
-      artifact: manifests                        
+  - stage: 'Build'
+    displayName: 'Build and push'
+    jobs:  
+      - job: 'Build'
+        displayName: 'Build job'
+        pool:
+          vmImage: 'ubuntu-20.04'
+        steps:
+          - task: Docker@2
+            displayName: 'Build and push the image to container registry'
+            inputs:
+              command: buildAndPush
+              buildContext: $(Build.Repository.LocalPath)
+              repository: $(webRepository)
+              dockerfile: '$(Build.SourcesDirectory)/Tailspin.SpaceGame.Web/Dockerfile'
+              containerRegistry: 'acr-sc'
+              tags: |
+                $(tag)
+          - task: Docker@2
+            displayName: 'Build and push the leaderboard image to container registry'
+            inputs:
+              command: buildAndPush
+              buildContext: $(Build.Repository.LocalPath)
+              repository: $(leaderboardRepository)
+              dockerfile: '$(Build.SourcesDirectory)/Tailspin.SpaceGame.LeaderboardContainer/Dockerfile'
+              containerRegistry: 'acr-sc'
+              tags: |
+                $(tag)  
+          - publish: '$(Build.SourcesDirectory)/manifests'
+            artifact: manifests                        
 
-- stage: 'Deploy'
-  displayName: 'Deploy the containers'
-  dependsOn: Build
-  jobs:
-  - deployment: Deploy
-    displayName: Deploy
-    pool:
-      vmImage: 'ubuntu-20.04'
-    environment: 'dev'
-    variables:
-    - group: Release
-    strategy:
-      runOnce:
-        deploy:
-          steps:
-          - download: current
-            artifact: manifests
-    - task: KubernetesManifest@1
-      displayName: Create imagePullSecret
-      inputs:
-        action: createSecret
-        connectionType: azureResourceManager
-        secretName: $(imagePullSecret)
-        dockerRegistryEndpoint: 'Container Registry Connection'
-        azureSubscriptionConnection: 'Kubernetes Cluster Connection'
-        azureResourceGroup: 'eShopOnWeb-test'
-        kubernetesCluster: 'tailspinspacegame-24591'
-        namespace: 'default'
+  - stage: 'Deploy'
+    displayName: 'Deploy the containers'
+    dependsOn: Build
+    jobs:
+      - deployment: Deploy
+        displayName: Deploy
+        pool:
+          vmImage: 'ubuntu-20.04'
+        environment: 'dev'
+        variables:
+          - group: Release
+        strategy:
+          runOnce:
+            deploy:
+              steps:
+                - download: current
+                  artifact: manifests
+                - task: KubernetesManifest@1
+                  displayName: Create imagePullSecret
+                  inputs:
+                    action: createSecret
+                    connectionType: azureResourceManager
+                    secretName: $(imagePullSecret)
+                    dockerRegistryEndpoint: 'acr-sc'
+                    azureSubscriptionConnection: 'aks-sc'
+                    azureResourceGroup: 'eShopOnWeb-test'
+                    kubernetesCluster: 'tailspinspacegame-24591'
+                    namespace: 'default'
     
-    - task: KubernetesManifest@1
-      displayName: Deploy to Kubernetes cluster
-      inputs:
-        action: deploy
-        connectionType: azureResourceManager
-        azureSubscriptionConnection: 'Kubernetes Cluster Connection'
-        azureResourceGroup: 'eShopOnWeb-test'
-        kubernetesCluster: 'tailspinspacegame-24591'
-        namespace: 'default'
-        manifests: |
-          $(Pipeline.Workspace)/manifests/deployment.yml
-          $(Pipeline.Workspace)/manifests/service.yml
-        imagePullSecrets: |
-          $(imagePullSecret)
-        containers: |
-          $(RegistryName)/$(webRepository):$(tag)
-          $(RegistryName)/$(leaderboardRepository):$(tag)           
+                - task: KubernetesManifest@1
+                  displayName: Deploy to Kubernetes cluster
+                  inputs:
+                    action: deploy
+                    connectionType: azureResourceManager
+                    azureSubscriptionConnection: 'aks-sc'
+                    azureResourceGroup: 'eShopOnWeb-test'
+                    kubernetesCluster: 'tailspinspacegame-24591'
+                    namespace: 'default'
+                    manifests: |
+                      $(Pipeline.Workspace)/manifests/deployment.yml
+                      $(Pipeline.Workspace)/manifests/service.yml
+                    imagePullSecrets: |
+                      $(imagePullSecret)
+                    containers: |
+                      $(RegistryName)/$(webRepository):$(tag)
+                      $(RegistryName)/$(leaderboardRepository):$(tag)
