--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,7 +48,7 @@ stages:
         displayName: Deploy
         pool:
           vmImage: 'ubuntu-20.04'
-        environment: 'dev'
+        environment: 'Dev'
         variables:
           - group: Release
         strategy:
@@ -66,7 +66,7 @@ stages:
                     dockerRegistryEndpoint: 'acr-sc'
                     azureSubscriptionConnection: 'aks-sc'
                     azureResourceGroup: 'eShopOnWeb-test'
-                    kubernetesCluster: 'tailspinspacegame-24591'
+                    kubernetesCluster: 'eshopweb-0217'
                     namespace: 'default'
     
                 - task: KubernetesManifest@1
@@ -76,7 +76,7 @@ stages:
                     connectionType: azureResourceManager
                     azureSubscriptionConnection: 'aks-sc'
                     azureResourceGroup: 'eShopOnWeb-test'
-                    kubernetesCluster: 'tailspinspacegame-24591'
+                    kubernetesCluster: 'eshopweb-0217'
                     namespace: 'default'
                     manifests: |
                       $(Pipeline.Workspace)/manifests/deployment.yml
